@@ -1,3 +1,12 @@
+Thu Jun 17 12:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Tools/gdnc.m: Only use OpenStep NSNotificationCenter methods.
+	* Source/NSConnection.m: ditto
+	* Source/NSDistributedNotificationCenter.m: ditto
+	* Source/NSPort.m: ditto
+	* Source/NSPortNameServer.m: ditto
+	* Source/NSSerializer.m: ditto
+
 Mon Jun 14 10:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSConcreteValue.m: Update for MacOS-X and for GC
